# ModuleWorksTestTask

./: .gitignore  CMakeLists.txt  README.md  build.py  cutSphereMove.sln  cutSphereMove.vcxproj  cutSphereMove.vcxproj.filters  main.cpp  test.py
PointVisualizer/: PointVisualizer.html
tests/input/: test.txt  test001_diagonal_line.txt  test002_arc.txt  test003_diagonal_line2.txt
tests/output/: test001_diagonal_line.txt  test002_arc.txt  test003_diagonal_line2.txt
tests/reference/: test001_diagonal_line.txt  test003_diagonal_line2.txt
